2010-02-20 Carlo Baldassi <carlobaldassi@gmail.com>
	* new: reduced interface for aux layers
	* modified: text in new and edit buttons for
	  aux layers; inverted new/edit positions
	* modified: active layer goes back to the one
	  which is to be rescaled after creating/editing
	  aux layers
	* modified: interactive dialog stays above
	  other windows
	* modified: Interactive button bigger with text

2009-05-19 Carlo Baldassi <carlobaldassi@gmail.com>
	* new: info icons for aux layers
	* modified: new liblqr energy functions instead
	  of old gradients

2009-05-18 Carlo Baldassi <carlobaldassi@gmail.com>
	* new: edit buttons for aux layers

2009-02-15 Carlo Baldassi <carlobaldassi@gmail.com>
	* modified : introduce Windows-specific code
	  for interactive interface

2009-02-04 Carlo Baldassi <carlobaldassi@gmail.com>
	* bugfix : fixed non-interactive mode
	* new : batch script for non-interactive execution

2009-01-27 Carlo Baldassi <carlobaldassi@gmail.com>
	* new : interactive interface
	* new : with and height (std) scaleback modes
	* modified: mode combo box moved to output tab

2008-11-24 Carlo Baldassi <carlobaldassi@gmail.com>

	* modified : split auto button in 2
	* bugfix : hid some tooltips in unsensitive
	  regions

2008-10-31 Carlo Baldassi <carlobaldassi@gmail.com>

	* bugfix : refresh button discarded guess
	  direction
	* bugfix : cleanup in .po files

2008-10-27 Carlo Baldassi <carlobaldassi@gmail.com>

	* bugfix : only convert to RGB if needed

2008-10-24 Carlo Baldassi <carlobaldassi@gmail.com>

	* bugfix : fixed some problems with new masks
	  in greyscale images

2008-10-21 Carlo Baldassi <carlobaldassi@gmail.com>

	* modified : use expanders and scroll widgets in
	  Advanced tab
	* new : added enlargement step selector
	* modified : removed size limits

2008-10-17 Carlo Baldassi <carlobaldassi@gmail.com>

	* bugfix : forbid going below 50% of original size
	  in ``LqR+LqR back'' mode
	* bugfix : enforced limits in render.c to prevent